# anime-game-data

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: dimbreath.rs  game_data.rs  lib.rs  types.rs
src/test_data/ExcelBinOutput/: AvatarExcelConfigData.json  AvatarSkillDepotExcelConfigData.json  DisplayItemExcelConfigData.json  MaterialExcelConfigData.json  ReliquaryAffixExcelConfigData.json  ReliquaryAffixExcelConfigData2.json  ReliquaryExcelConfigData.json  ReliquaryMainPropExcelConfigData.json  WeaponExcelConfigData.json
src/test_data/TextMap/: TextMapEN.json
